Implement SHOW CURRENT USER (#7487)
* Implement SHOW CURRENT USER

Co-authored-by: Olivia Ytterbrink <olivia@ytterbrink.com>
Co-authored-by: Therese Magnusson <scout.therese@gmail.com>